--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,43 +1,36 @@
+.navbar{
+  height: 50vh;
+}
+
 .nav-list{
   list-style-type: none;
 }
 
-.dropdown {
-  position: relative;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: black;
-  left: 0;
-  top: 100%;
-  padding: 1rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-}
-
-.dropdown-content .grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1rem;
-}
-
-.dropdown-content a {
+.nav-link:hover{
+  text-decoration: underline;
   color: white;
-  text-decoration: none;
-  text-align: center;
+  text-underline-offset: 7px;
 }
 
-.dropdown:hover .dropdown-content {
-  display: block;
+.ntbcustom{
+  background-color: #ff8d21;
+  color: black;
+  font-weight: 600;
+  border:none;
+  outline: none;
 }
 
-.login-btn{
+.ntbcustom:hover {
+  transition: all 500ms ease-in;
+  color: white;
   background-color: transparent;
+  border: 1px solid #ff8d21;
 }
 
-.login-btn:hover {
-  transition: all 700ms ease-out;
-  background-color: #036dc3;
+.hcraesLfts{
+  width: 300px;
+}
+
+.form-search{
+  box-shadow: none;
 }
