Completion of Footer

--- a/src/app/shared/components/search/search.component.css
+++ b/src/app/shared/components/search/search.component.css
@@ -12,6 +12,14 @@
   box-shadow: none;
 }
 
+.search-icon{
+  cursor: pointer;
+}
+
+.stars-icon{
+  cursor: pointer;
+}
+
 .popup {
   position: absolute;
   top: 210px;
