Partial Body Content

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -40,14 +40,14 @@
       <div class="col-md-3">
         <h5 class="footer-heading">Follow Us</h5>
         <ul class="list-unstyled social-icons">
-          <img src="../../assets/Images/facebook.png" width="30" height="30" />
-          <img src="../../assets/Images/instagram.png" width="30" height="30" />
-          <img src="../../assets/Images/twitter.png" width="30" height="30" />
-          <img src="../../assets/Images/social.png" width="30" height="30" />
-          <img src="../../assets/Images/linkedin.png" width="30" height="30" />
-          <img src="../../assets/Images/youtube.png" width="30" height="30" />
-          <img src="../../assets/Images/reddit.png" width="30" height="30" />
-          <img src="../../assets/Images/discord.png" width="30" height="30" />
+          <a class="nav-link" href="#"><img src="../../assets/Images/facebook.png" width="30" height="30" /></a>
+          <a class="nav-link" href="#"><img src="../../assets/Images/instagram.png" width="30" height="30" /></a>
+          <a class="nav-link" href="#"><img src="../../assets/Images/twitter.png" width="30" height="30" /></a>
+          <a class="nav-link" href="#"><img src="../../assets/Images/social.png" width="30" height="30" /></a>
+          <a class="nav-link" href="#"><img src="../../assets/Images/linkedin.png" width="30" height="30" /></a>
+          <a class="nav-link" href="#"><img src="../../assets/Images/youtube.png" width="30" height="30" /></a>
+          <a class="nav-link" href="#"><img src="../../assets/Images/reddit.png" width="30" height="30" /></a>
+          <a class="nav-link" href="#"><img src="../../assets/Images/discord.png" width="32" height="31" /></a>
         </ul>
       </div>
     </div>
