--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
+<!--Header Section-->
 <app-header />
+
+<!--Main Body-->
+<div class="p-3">
+  <app-body />
+</div>
+
+<!--Footer Section-->
 <app-footer />
