--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -16,56 +16,29 @@
   <div class="stocks-container">
     <div class="card">
       <img src="../../assets/Images/Icon.png" class="card-img-top" alt="">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
     </div>
     <div class="card">
       <img src="../../assets/Images/Icon.png" class="card-img-top" alt="">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
     </div>
     <div class="card">
       <img src="../../assets/Images/Icon.png" class="card-img-top" alt="">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="../../assets/Images/Icon.png" class="card-img-top" alt="">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
     </div>
     <div class="card">
       <img src="../../assets/Images/Icon.png" class="card-img-top" alt="">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
     </div>
     <div class="card">
       <img src="../../assets/Images/Icon.png" class="card-img-top" alt="">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
+    </div>
+    <div class="card">
+      <img src="../../assets/Images/Icon.png" class="card-img-top" alt="">
     </div>
   </div>
 
-  <div class="know-us-container mt-5">
-    <h4>Know About Us</h4>
+  <h4 class="text-center mt-5 mb-1">Know About Us</h4>
+  <div class="container-fluid d-flex flex-row align-items-center">
+    <img class="knowUsImg" src="../../assets/Images/About_Sidebar.jpg" width="450" height="200" />
+    <div class="container-fluid">
+      <app-know-us />
+    </div>
   </div>
 </div>
