--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,7 +35,7 @@
             <a class="nav-link fs-6" aria-current="page" href="#">Fonts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-6" aria-current="page" href="#">Add-Ons</a>
+            <a class="nav-link fs-6" aria-current="page" href="#">Audio and Music</a>
           </li>
         </ul>
       </div>
