--- a/src/app/shared/components/video-displayer/video-displayer.component.css
+++ b/src/app/shared/components/video-displayer/video-displayer.component.css
@@ -7,6 +7,11 @@
   padding: 16px;
 }
 
+video{
+  width: 450px;
+  height: 250px;
+}
+
 .video-container {
   display: flex;
   justify-content: center;
@@ -20,17 +25,21 @@
 }
 
 @media (max-width: 950px) {
+  video{
+    width: 300px;
+    height: 150px;
+  }
   .grid-container {
-    grid-template-columns: repeat(1, minmax(450px, 1fr));
+    grid-template-columns: repeat(2, minmax(270px, 1fr));
   }
 }
 
-@media (max-width: 950px) {
-  .grid-container {
-    grid-template-columns: repeat(1, minmax(450px, 1fr));
-  }
-
+@media (max-width: 590px) {
   video{
-    width: 350px;
+    width: 300px;
+    height: 150px;
+  }
+  .grid-container {
+    grid-template-columns: repeat(1, minmax(270px, 1fr));
   }
 }
