--- a/src/app/shared/components/video-displayer/video-displayer.component.html
+++ b/src/app/shared/components/video-displayer/video-displayer.component.html
@@ -2,7 +2,7 @@
   <div *ngFor="let link of videoLinks" class="video-container"
     (mouseenter)="playVideo($event)"
     (mouseleave)="pauseVideo($event)">
-    <video muted width="450" height="250">
+    <video muted>
       <source [src]="link.videosrc" type="video/mp4">
       Your browser does not support the video tag.
     </video>
