Added Login Component And Routing

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -41,7 +41,7 @@
       </div>
       <div class="d-flex flex-row align-self-center mb-lg-0 mb-3">
         <button class="ntbcustom btn btn-primary me-2">Pricing</button>
-        <button class="ntbcustom btn btn-primary">Sign In</button>
+        <button class="ntbcustom btn btn-primary" (click)="navigateToLogin()">Sign In</button>
       </div>
     </div>
   </div>
