--- a/src/app/shared/components/video-displayer/video-displayer.component.html
+++ b/src/app/shared/components/video-displayer/video-displayer.component.html
@@ -1,7 +1,7 @@
 <div class="grid-container">
   <div *ngFor="let link of videoLinks" class="video-container"
     (mouseenter)="playVideo($event)"
-    (mouseleave)="pauseVideo($event)">
+    (mouseleave)="resetVideo($event)">
     <video muted>
       <source [src]="link.videosrc" type="video/mp4">
       Your browser does not support the video tag.
