--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,3 +1,5 @@
+<app-header />
+
 <div class="container-fluid d-flex flex-column align-items-center justify-content-between">
   <div class="signUp-banner container-fluid d-flex flex-row justify-content-evenly align-items-center">
     <div class="banner-para">
@@ -22,3 +24,5 @@
 
   <app-card [cardLinks]="cardLinks" />
 </div>
+
+<app-footer />
