--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-start flex-grow-1 pe-2">
           <li class="nav-item">
-            <a class="nav-link fs-6" aria-current="page" href="#">Images</a>
+            <a class="nav-link fs-6" aria-current="page">Images</a>
           </li>
           <li class="nav-item">
             <a class="nav-link fs-6" aria-current="page" href="#">Videos</a>
