--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,6 @@
   font-family: 'Roboto Slab', serif;
 }
 
-.ntbcustom{
-  background-color: #ff8d21;
-  color: black;
-  font-weight: 600;
-  border:none;
-  outline: none;
+a{
+  cursor: pointer;
 }
