Changed Header And Added Components

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,41 +1,46 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-black flex-column justify-content-between">
+<video class="background-video" autoplay loop muted playsinline>
+  <source src="../../assets/Videos/header-bg.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
+<nav class="navbar navbar-expand-lg navbar-dark flex-column justify-content-between p-3">
   <div class="container-fluid">
     <a class="navbar-brand d-flex flex-row" href="#">
-      <img class="me-1" src="../../assets/Images/Icon_White.png" width="20" height="20"/>
-      <h5 class="m-0">STOCKS</h5>
+      <img class="me-1" src="../../assets/Images/Icon_White.png" width="20" height="20" />
+      <h5 class="m-0 text-white">STOCKS</h5>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#LsftIDES">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="offcanvas offcanvas-start d-flex flex-lg-row justify-content-between text-bg-dark" tabindex="-1" id="LsftIDES" aria-labelledby="lebalrabvan">
+    <div class="offcanvas offcanvas-start d-flex flex-lg-row justify-content-between" tabindex="-1" id="LsftIDES" aria-labelledby="lebalrabvan">
       <div class="offcanvas-header">
-        <img class="me-1" src="../../assets/Images/Icon_White.png" width="30" height="30"/>
+        <img class="me-1" src="../../assets/Images/Icon_White.png" width="30" height="30" />
         <h5 class="offcanvas-title" id="lebalrabvan">STOCKS</h5>
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
-      <hr class="d-lg-none idervanvasv">
+      <hr class="d-lg-none">
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-start flex-grow-1 pe-2">
           <li class="nav-item">
             <a class="nav-link fs-6" routerLink="/images" routerLinkActive="active" aria-current="page">Images</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-6" routerLink="/videos" routerLinkActive="active" aria-current="page" href="#">Videos</a>
+            <a class="nav-link fs-6" routerLink="/videos" routerLinkActive="active" aria-current="page">Videos</a>
           </li>
           <li class="nav-item">
-            <app-nav-dropdown [mainLink]="graphics" [dropdownLinks]="graphicsDropdown" />
+            <app-nav-dropdown [mainLink]="graphics" [dropdownLinks]="graphicsDropdown"></app-nav-dropdown>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-6" routerLink="/booksAndpdf" routerLinkActive="active" aria-current="page" href="#">Books & Pdfs</a>
+            <a class="nav-link fs-6" routerLink="/booksAndpdf" routerLinkActive="active" aria-current="page">Books & PDFs</a>
           </li>
           <li class="nav-item">
-            <app-nav-dropdown [mainLink]="Presentations" [dropdownLinks]="presentationDropdown" />
+            <app-nav-dropdown [mainLink]="Presentations" [dropdownLinks]="presentationDropdown"></app-nav-dropdown>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-6" routerLink="/fonts" routerLinkActive="active" aria-current="page" href="#">Fonts</a>
+            <a class="nav-link fs-6" routerLink="/fonts" routerLinkActive="active" aria-current="page">Fonts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-6" routerLink="/music" routerLinkActive="active" aria-current="page" href="#">Audio and Music</a>
+            <a class="nav-link fs-6" routerLink="/music" routerLinkActive="active" aria-current="page">Audio and Music</a>
           </li>
         </ul>
       </div>
@@ -46,10 +51,8 @@
     </div>
   </div>
   <div class="desc align-self-center text-center">
-    <h2 class="fw-bolder text-white fs-2">Smarter creativity, Faster Designs</h2>
-    <h5 class="fw-bolder text-white">Everything you need, from stock images and videos to AI-powered design tools</h5>
-</div>
-  <div class="hcraesLfts">
-    <app-button-toggle [FirstText]="'Search'" [LastText]="'Create'" />
+    <h2 class="fw-bolder fs-2">Smarter Creativity, Faster Designs</h2>
+    <h5 class="fw-bolder mb-5">Everything you need, from stock images and videos to AI-powered design tools</h5>
+    <app-button-toggle [FirstText]="'Search'" [LastText]="'Create'"></app-button-toggle>
   </div>
 </nav>
