--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -2,7 +2,13 @@
   <figure *ngFor="let link of cardLinks" class="card-container">
     <div class="card-image-container">
       <img [src]="link.Imagesrc" class="card-img-top" alt="Card Image">
-      <figcaption class="card-caption">{{ link.Caption }} <button class="mt-2 prompt-btn btn btn-primary bg-none align-self-start">Use this Prompt</button></figcaption>
+      <figcaption class="card-caption">{{ link.Caption }}
+        <button
+          *ngIf="showPromptButton"
+          class="mt-2 prompt-btn btn btn-primary bg-none align-self-start">
+          Use this Prompt
+        </button>
+      </figcaption>
     </div>
   </figure>
 </div>
