--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -9,7 +9,7 @@
       <option value="video">Videos</option>
     </select>
     <input type="search" class="form-control search-field me-2" [placeholder]="placeholderText" [(ngModel)]="searchQuery" name="searchQuery" />
-    <i class="fas fa-search search-icon fs-5 me-2" (click)="onSubmit()"></i>
-    <i class="bi bi-stars stars-icon fs-5 me-2"></i>
+    <i class="fas fa-search custom-icon fs-5 me-2" (click)="onSubmit()"></i>
+    <i class="bi bi-stars custom-icon fs-5 me-2"></i>
   </form>
 </div>
