--- a/src/app/shared/pages/images/images.component.html
+++ b/src/app/shared/pages/images/images.component.html
@@ -1,1 +1,5 @@
-<p>images works!</p>
+<app-page-header></app-page-header>
+
+<app-category-carousel></app-category-carousel>
+
+<app-footer></app-footer>
