--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,25 @@
-.navbar{
-  height: 50vh;
+.navbar {
+  position: relative;
+  height: 65vh;
+  background: transparent;
+  z-index: 1;
+}
+
+.background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
+  background-repeat: no-repeat;
+  filter: brightness(75%);
+  z-index: -1;
+}
+
+.nav-link{
+  font-weight: bold;
+  color: white;
 }
 
 .nav-list{
@@ -8,7 +28,6 @@
 
 .nav-link:hover{
   text-decoration: underline;
-  color: white;
   text-underline-offset: 7px;
 }
 
@@ -32,4 +51,11 @@
 
 .form-search{
   box-shadow: none;
+}
+
+.desc {
+  position: relative;
+  z-index: 2;
+  text-align: center;
+  color: white;
 }
