--- a/src/app/shared/components/search/search.component.css
+++ b/src/app/shared/components/search/search.component.css
@@ -5,6 +5,7 @@
   border: none;
   box-shadow: none;
   border-radius: 10px;
+  z-index: 2;
 }
 
 .search-select {
@@ -12,25 +13,9 @@
   box-shadow: none;
 }
 
-.search-icon{
+.custom-icon{
   cursor: pointer;
-}
-
-.stars-icon{
-  cursor: pointer;
-}
-
-.popup {
-  position: absolute;
-  top: 210px;
-  left: 1050px;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-  font-size: 14px;
-  color: #333;
-  z-index: 10;
+  color: black;
 }
 
 @media (max-width: 900px){
