Changes To Images Component

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -22,7 +22,7 @@
     <p>Looking for something, We have everything.</p>
   </div>
 
-  <app-card [cardLinks]="cardLinks" [showPromptButton]="true" />
+  <app-card [cardLinks]="cardLinks" [showImageCaption]="true" [showPromptButton]="true" />
 </div>
 
 <app-footer />
