--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#LsftIDES">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="offcanvas offcanvas-start d-flex flex-lg-row justify-content-between" tabindex="-1" id="LsftIDES" aria-labelledby="lebalrabvan">
+    <div class="offcanvas offcanvas-start d-flex flex-lg-row justify-content-between text-black" tabindex="-1" id="LsftIDES" aria-labelledby="lebalrabvan">
       <div class="offcanvas-header">
         <img class="me-1" src="../../assets/Images/Icon_White.png" width="30" height="30" />
         <h5 class="offcanvas-title" id="lebalrabvan">STOCKS</h5>
