--- a/src/app/shared/components/category-carousel/category-carousel.component.css
+++ b/src/app/shared/components/category-carousel/category-carousel.component.css
@@ -20,8 +20,13 @@
 }
 
 .block {
-  width: 200px;
-  height: 500px;
+  width: 230px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  justify-content: end;
   text-align: center;
   border-left: 1px solid white;
   border-right: 1px solid white;
