--- a/src/app/shared/components/nav-dropdown/nav-dropdown.component.css
+++ b/src/app/shared/components/nav-dropdown/nav-dropdown.component.css
@@ -5,7 +5,7 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: black;
+  background-color: #212121;
   left: 0;
   top: 100%;
   width: 15vw;
