--- a/src/app/shared/components/fortune-cookie/fortune-cookie.component.html
+++ b/src/app/shared/components/fortune-cookie/fortune-cookie.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row">
-    <div class="col-lg-10">
-      <p class="box text-center">{{quoteText}}</p>
+    <div class="col-lg-10 align-items-center">
+      <p class="box text-center fs-4">{{quoteText}}</p>
     </div>
     <div class="col-lg-2">
       <img class="cookie" width="100" height="100" (click)="generateQuote()" src="../../../../assets/Images/fortunecookie.jpg">
