Completed Books And PDF

--- a/src/app/shared/components/category-carousel/category-carousel.component.html
+++ b/src/app/shared/components/category-carousel/category-carousel.component.html
@@ -7,8 +7,8 @@
       class="block"
       (mouseover)="onHover(i)"
       (mouseout)="onMouseOut()">
-      <h2>{{block.heading}}</h2>
-      <h6>{{block.captions}}</h6>
+      <h2 class="heading">{{block.heading}}</h2>
+      <h6 class="caption">{{block.captions}}</h6>
     </div>
   </div>
 </div>
