--- a/src/app/shared/components/fortune-cookie/fortune-cookie.component.css
+++ b/src/app/shared/components/fortune-cookie/fortune-cookie.component.css
@@ -4,3 +4,9 @@
   border: 10px solid #F9F9F9;
   padding:10px;
 }
+
+@media (max-width: 580px){
+  .container-fluid{
+    display: none !important;
+  }
+}
