--- a/src/app/shared/pages/images/images.component.html
+++ b/src/app/shared/pages/images/images.component.html
@@ -1,7 +1,7 @@
 <div class="hkepasegami">
   <app-page-header></app-page-header>
 
-  <div class="text-center mt-5">
+  <div class="start-heading text-center mt-5">
     <h2>Find Most Choosen Categories</h2>
     <p>Trending options are here only for you</p>
   </div>
@@ -16,29 +16,8 @@
   </div>
   <app-collections-carousel [backgroundUrls]="collectionBackgorunds"></app-collections-carousel>
 
-  <div class="container py-4 hetusuccn d-flex flex-row justify-content-evenly align-items-center mb-5">
-    <div class="kSJbdshj d-flex flex-column justify-content-evenly">
-      <h3 class="m-0 text-white">Rule The World With Our Stunning AI Tools</h3>
-      <p class="mt-3 text-white">Empower your future with cutting-edge AI tools and technologies designed to revolutionize the way you work, innovate, and succeed!</p>
-      <button class="animated-button align-self-center">
-        <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
-          ></path>
-        </svg>
-        <span class="text">Let's Go</span>
-        <span class="circle"></span>
-        <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
-          ></path>
-        </svg>
-      </button>
-    </div>
-    <div>
-      <img src="../../../../assets/Images/airobot.png" width="400" height="400"/>
-    </div>
-  </div>
+  <app-common-banner></app-common-banner>
+
   <app-footer></app-footer>
 </div>
 
