--- a/src/app/shared/components/category-carousel/category-carousel.component.css
+++ b/src/app/shared/components/category-carousel/category-carousel.component.css
@@ -33,3 +33,74 @@
   line-height: 50px;
   cursor: pointer;
 }
+
+@media (max-width: 1170px){
+  .block {
+    width: 200px;
+    height: 330px;
+  }
+}
+
+@media (max-width: 1090px){
+  .block {
+    width: 180px;
+    height: 300px;
+  }
+}
+
+@media (max-width: 920px){
+  .block {
+    width: 160px;
+    height: 270px;
+  }
+}
+
+@media (max-width: 820px){
+  .block {
+    width: 140px;
+    height: 270px;
+  }
+
+  .heading, .caption{
+    font-size: 14px !important;
+  }
+}
+
+@media (max-width: 720px){
+  .block {
+    width: 120px;
+    height: 270px;
+  }
+
+  .heading, .caption{
+    font-size: 14px !important;
+  }
+}
+
+@media (max-width: 620px){
+  .block {
+    width: 100px;
+    height: 240px;
+  }
+
+  .heading, .caption{
+    font-size: 14px !important;
+  }
+}
+
+@media (max-width: 520px){
+  .block {
+    width: 80px;
+    height: 200px;
+  }
+
+  .heading, .caption{
+    font-size: 14px !important;
+  }
+}
+
+@media (max-width: 420px){
+  .block {
+    display: none;
+  }
+}
