--- a/src/app/shared/components/collections-carousel/collections-carousel.component.html
+++ b/src/app/shared/components/collections-carousel/collections-carousel.component.html
@@ -4,12 +4,12 @@
       <img *ngFor="let url of data.url" [src]="url">
     </div>
 
-    <div class="gallery-info d-lg-flex d-md-flex justify-content-between align-items-center mt-2 d-none">
+    <div class="gallery-info d-flex justify-content-between align-items-center mt-2">
       <div>
         <h4 class="mb-0 mt-2 fs-5">{{ data.heading }}</h4>
         <p class="text-muted mb-0">Resources: {{ data.resources }}</p>
       </div>
-      <div class="menu-icon">
+      <div class="menu-icon d-sm-none">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
           <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
         </svg>
