--- a/src/app/shared/components/fortune-cookie/fortune-cookie.component.html
+++ b/src/app/shared/components/fortune-cookie/fortune-cookie.component.html
@@ -1,10 +1,10 @@
-<div class="container mt-5">
+<div class="container-fluid mt-5">
   <div class="row">
-    <div class="col-lg-10 align-items-center">
+    <div class="quotetextcolumn col-lg-10 col-md-9 col-sm-7">
       <p class="box text-center fs-4">{{quoteText}}</p>
     </div>
-    <div class="col-lg-2">
-      <img class="cookie" width="100" height="100" (click)="generateQuote()" src="../../../../assets/Images/fortunecookie.jpg">
+    <div class="cookieImageColumn col-lg-2 col-md-3 col-sm-5 justify-content-center">
+      <img class="cookie bg-transparent" width="100" height="100" (click)="generateQuote()" src="../../../../assets/Images/fortunecookie.jpg">
     </div>
   </div>
 </div>
