--- a/src/app/shared/pages/graphics/graphics.component.html
+++ b/src/app/shared/pages/graphics/graphics.component.html
@@ -13,6 +13,11 @@
     </div>
   </div>
 
+  <h4 class="text-center mt-5">Just click, Play and Choose. Free 3D Models</h4>
+  <p class="mt-2 mb-5 text-center">Explore All the Models for free and Enjoy the unlimited scenes</p>
+  <div class="d-flex flex-row flex-wrap gap-5 align-items-center justify-content-center">
+    <app-gltf-viewer></app-gltf-viewer>
+  </div>
 
   <app-footer></app-footer>
 </div>
